[project]
name = "mtgimg"

[tool.isort]
profile = "black"
lines_after_imports = 2
honor_noqa = true

[tool.black]
line-length = 119

[tool.poetry]
name = "mtgimg"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.9"
pillow = "~9.4"
requests = "^2.31.0"
immutabledict = "~3.0"
promise = "~2.3"
appdirs = "~1.4"
aggdraw = "~1.3"
mtgorp = { git = "https://github.com/guldfisk/mtgorp.git" }
yeetlong = { git = "https://github.com/guldfisk/yeetlong.git" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
